--- a/list.conf
+++ b/list.conf
@@ -1,2 +1,2 @@
-https://m.youtube.com/watch?v=LV3EkITxnnA
-https://m.youtube.com/watch?v=LV3EkITxnnA
+Good text https://m.youtube.com/watch?v=LV3EkITxnnA
+Java https://m.youtube.com/watch?v=LV3EkITxnnA
