--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,4 +23,4 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          node dist/index.js
+          node src/index.js
